# pynecone-starter

./: pcconfig.py  pyproject.toml  railway.json
pynecone_starter/: pynecone_starter.py
