[tool.poetry]
name = "demo"
version = "0.1.0"
description = ""
authors = ["Qubisted <78350166+Qubisted@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pynecone-io = "^0.1.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
